RESOLVED FIXED306142
[JSC] Embed RTT* into WasmGC object and use it instead of Structure
https://bugs.webkit.org/show_bug.cgi?id=306142
Summary [JSC] Embed RTT* into WasmGC object and use it instead of Structure
Yusuke Suzuki
Reported 2026-01-23 13:12:27 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-23 13:12:35 PST
Yusuke Suzuki
Comment 2 2026-01-23 13:15:15 PST
EWS
Comment 3 2026-01-26 11:11:56 PST
Committed 306226@main (cf081af6f520): <https://commits.webkit.org/306226@main> Reviewed commits have been landed. Closing PR #57144 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.